# component-oak_d_lite

./: Cargo.toml  LICENSE  README.md  component.yaml  simulation.yaml  structure.urdf
src/: main.rs
