[package]
name = "phoxal-component-oak_d_lite"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing = { workspace = true }
phoxal-engine = { workspace = true }
phoxal-utils-helpers = { workspace = true }

[lints]
workspace = true
